--- a/docs/TODO
+++ b/docs/TODO
@@ -10,6 +10,8 @@ Add unit tests
 
 Setup check for pull requests
 
+Add price reduction info in booking process
+
 Add posibility to choose custom destination
 Add default destinations
 Add posibility to choose destination for weather print
